# SimplePresenter

./: .gitignore  BUILD.md  BUILD_HELP.md  CHANGES.md  CMakeLists.txt  COMPLETION_SUMMARY.md  FILE_MANIFEST.md  IMPORTANT_NOTES.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  USAGE.md  VISUAL_OVERVIEW.md  build.ps1  deploy.ps1  find-qt.ps1  update.json
cef_cache/: Local State
cef_cache/Default/: Web Data
cef_cache/Default/Code Cache/js/index-dir/: the-real-index
cef_cache/Default/Code Cache/wasm/index-dir/: the-real-index
cef_cache/Default/Extension Rules/: LOG  LOG.old
cef_cache/Default/Extension Scripts/: LOG  LOG.old
cef_cache/Default/Site Characteristics Database/: LOG  LOG.old
cef_cache/Default/Sync Data/LevelDB/: LOG  LOG.old
cef_cache/ShaderCache/: index
cef_data/: Local State
cef_data/Default/Code Cache/js/index-dir/: the-real-index
cef_data/Default/Code Cache/wasm/index-dir/: the-real-index
cef_data/Default/Extension Rules/: LOG  LOG.old
cef_data/Default/Extension Scripts/: LOG  LOG.old
cef_data/Default/Local Storage/leveldb/: LOG  LOG.old
cef_data/Default/Site Characteristics Database/: LOG  LOG.old
cef_data/Default/Sync Data/LevelDB/: LOG  LOG.old
data/bibles/: sample_bible.xml
data/services/: sample_service.service
data/songs/: Amazing_Grace.txt  How_Great_Thou_Art.txt  Shout To The Lord.xml  Still.xml
deploy/translations/: qt_ca.qm  qt_de.qm  qt_es.qm  qt_fr.qm  qt_ja.qm  qt_ka.qm  qt_ko.qm  qt_pl.qm  qt_ru.qm  qt_sv.qm  qt_tr.qm  qt_uk.qm  qt_zh_CN.qm
docs/: appcast.xml
installer/: SimplePresenter.iss
resources/: Info.plist.in  app_icon.rc  resources.qrc
src/: AdblockManager.cpp  AdblockManager.h  BackgroundRenderer.cpp  BackgroundRenderer.h  BibleManager.cpp  BibleManager.h  BiblePanel.cpp  BiblePanel.h  CanvasWidget.cpp  CanvasWidget.h  LivestreamCanvas.cpp  LivestreamCanvas.h  MainWindow.cpp  MainWindow.h  MediaPanel.cpp  MediaPanel.h  OverlayManager.cpp  OverlayManager.h  OverlayServer.cpp  OverlayServer.h  PlaylistManager.cpp  PlaylistManager.h  PlaylistPanel.cpp  PlaylistPanel.h  PowerPointPanel.cpp  PowerPointPanel.h  ProjectionCanvas.cpp  ProjectionCanvas.h  SettingsDialog.cpp  SettingsDialog.h  SongEditorDialog.cpp  SongEditorDialog.h  SongManager.cpp  SongManager.h  SongPanel.cpp  SongPanel.h  StreamEncoder.cpp  StreamEncoder.h  UpdateChecker.cpp  UpdateChecker.h  (+2 more)
